# Project-Fenaverat

./: .gitignore  Dockerfile  Pipfile  README.md  app.py  fly.toml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  dockerhub.yml
app/: configs.py
app/views/: page.py
backend/: database.py
backend/assets/: style.css
frontend/content/: aboutMe.json  header.json  myProjects.json  myServers.json
frontend/layout/: framework.py  header.py
frontend/layout/body/: aboutMe.py  myProjects.py  myServers.py
frontend/style/: aboutMe.json  footer.json  framework.json  header.json  myProjects.json  myServers.json
src/: callbacks.py  config.py  configs.py  layout.json  services.py  view.py
src/assets/: styles.css
src/assets/dbc/: accordion.css
src/assets/fonts/: fonts.css
src/assets/style/: aboutMe.css  body.css  footer.css  header.css  layout.css  myProjects.css  myServers.css  variables.css
src/content/: aboutMe.json  body.json  footer.json  header.json  myProjects.json  myServers.json
src/controllers/: aboutMeCallback.py  bodyCallback.py  footerCallback.py  headerCallback.py  myProjectsCallback.py  myServersCallback.py
src/models/: aboutMeManager.py  bodyManager.py  dataManager.py  footerManager.py  headerManager.py  loadManager.py  myProjectsManager.py  myServersManager.py  resourceManager.py
src/views/: body.py  footer.py  header.py  layout.py
src/views/components/: aboutMe.py  footer.py  header.py  myProjects.py  myServers.py
